--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="description" content="My personal portfolio website showcasing my projects and skills" />
+    <meta name="keywords" content="portfolio, web development, projects, skills" />
+    <meta name="author" content="Kenil" />
+    <meta name="theme-color" content="#000000" />
+    <meta property="og:title" content="Portfolio" />
+    <meta property="og:description" content="My personal portfolio website showcasing my projects and skills" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://portfolio.godcraft.fun/" />
+    <meta property="og:image" content="/preview-image.jpg" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <title>Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
