--- a/index.html
+++ b/index.html
@@ -4,17 +4,103 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="My personal portfolio website showcasing my projects and skills" />
-    <meta name="keywords" content="portfolio, web development, projects, skills" />
+    <meta name="description" content="Full-stack developer portfolio showcasing expertise in React, TypeScript, GSAP animations, and modern web development. View my projects, skills, and professional experience." />
+    <meta name="keywords" content="portfolio, web development, frontend developer, backend developer, full-stack developer, React, TypeScript, JavaScript, GSAP, Three.js, web animations, UI/UX, kenil, kenilgamer, kenilGame, kenil gamer, kenil sangani, kenilgamer3035, software engineer, web developer" />
     <meta name="author" content="Kenil" />
     <meta name="theme-color" content="#000000" />
     <meta property="og:title" content="Portfolio" />
-    <meta property="og:description" content="My personal portfolio website showcasing my projects and skills" />
+    <meta property="og:description" content="Full-stack developer portfolio showcasing expertise in React, TypeScript, GSAP animations, and modern web development. View my projects, skills, and professional experience." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://portfolio.godcraft.fun/" />
     <meta property="og:image" content="/preview-image.jpg" />
     <meta name="twitter:card" content="summary_large_image" />
+    <link rel="canonical" href="https://portfolio.godcraft.fun/" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:site_name" content="Portfolio" />
+    <meta name="twitter:title" content="Portfolio" />
+    <meta name="twitter:description" content="Full-stack developer portfolio showcasing expertise in React, TypeScript, GSAP animations, and modern web development. View my projects, skills, and professional experience." />
+    <meta name="twitter:image" content="/1000068353-Picsart-AiImageEnhancer.jpg-Photoroom.png" />
     <title>Portfolio</title>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Kenil",
+        "url": "https://portfolio.godcraft.fun/",
+        "description": "Full-stack developer portfolio showcasing expertise in React, TypeScript, GSAP animations, and modern web development. View my projects, skills, and professional experience.",
+        "image": "/1000068353-Picsart-AiImageEnhancer.jpg-Photoroom.png",
+        "jobTitle": "Full Stack Developer",
+        "knowsAbout": [
+          "React",
+          "TypeScript",
+          "JavaScript",
+          "GSAP",
+          "Three.js",
+          "Web Development",
+          "Frontend Development",
+          "UI/UX Design",
+          "Node.js",
+          "Express",
+          "MongoDB",
+          "SQL",
+          "RESTful APIs",
+          "Responsive Design",
+          "Tailwind CSS",
+          "Bootstrap",
+          "Material UI",
+          "Ant Design",
+          "Redux",
+          "Redux Toolkit",
+          "Redux Toolkit Query",,
+          "Next.js",
+          "Vite",
+          "Vite React",
+          "Vite React Router",
+          "Vite React Hook Form",
+          "Vite React Query",
+          "Vite React Toastify",
+          "Vite React Icons",
+          "Vite React Scroll",
+          "Vite React Scroll Progress Bar",
+          "Vite React Scroll Trigger",
+          "Vite React Scroll Smarter",
+          "Vite React Scroll Smarter",,
+          "php",
+          "laravel",
+          "mysql",
+          "mongodb",
+          "firebase",
+          "docker",
+          "kubernetes",
+          "aws",
+          "azure",
+          "heroku",
+          "vercel",
+          "netlify",
+          "cloudflare",
+          "linux",
+          "ubuntu",
+          "debian",
+          "centos",
+          "fedora",
+          "archlinux",
+          "windows",
+          "macos",
+          "ios",
+          "android",
+          "react native",
+          "react native web",
+        ]
+      }
+    </script>
+    <meta name="application-name" content="Portfolio" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-mobile-web-app-title" content="Portfolio" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="msapplication-TileColor" content="#000000" />
+    <meta name="msapplication-tap-highlight" content="no" />
   </head>
   <body>
     <div id="root"></div>
