update viewport meta tag, add Open Graph properties, and enable sourcemaps in Vite config

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport"   user-scalable="no" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Full-stack developer portfolio showcasing expertise in React, TypeScript, GSAP animations, and modern web development. View my projects, skills, and professional experience." />
     <meta name="keywords" content="portfolio, web development, frontend developer, backend developer, full-stack developer, React, TypeScript, JavaScript, GSAP, Three.js, web animations, UI/UX, kenil, kenilgamer, kenilGame, kenil gamer, kenil sangani, kenilgamer3035, software engineer, web developer, developer, kenil sangani, kenilgamer3035, kenilgamer, kenilGame, kenil gamer, kenil sangani, kenilgamer3035, software engineer, web developer, fontend developer, backend developer, full stack developer, react developer, typeScript developer, javaScript developer, gsap developer, three.js developer, web animations developer, UI/UX developer, kenil sangani, kenilgamer3035" />
     <meta name="author" content="Kenil" />
     <meta name="theme-color" content="#000000" />
+   
     <meta property="og:title" content="Portfolio" />
     <meta property="og:description" content="Full-stack developer portfolio showcasing expertise in React, TypeScript, GSAP animations, and modern web development. View my projects, skills, and professional experience." />
     <meta property="og:type" content="website" />
